[package]
name = "yocto-test"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/c-porto/yocto-rust-test"
description = "Simple test" 
repository = "https://github.com/c-porto/yocto-rust-test.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.204"
